Fix lists shift issue

--- a/src/App.css
+++ b/src/App.css
@@ -45,3 +45,8 @@ body {
 #root {
   height: 100%;
 }
+
+.ant-list-split .ant-list-item,
+.ant-list-split .ant-list-header {
+    border: none;
+}
